--- a/OnSaleProductsMVC/Views/Products/Index.cshtml
+++ b/OnSaleProductsMVC/Views/Products/Index.cshtml
@@ -1,10 +1,7 @@
-﻿@{
+﻿@model OnSaleProductsMVC.Views.Products.ProductIndexViewModel
+@{
     ViewBag.Title = "Index";
-    var product = new List<Product>{
-    new Product{Name="TV", Price = 250.55m, OnSale=true},
-    new Product{Name="MP3 Player", Price = 59.99m, OnSale=false},
-    new Product{Name="Xbox One", Price = 300.00m, OnSale=true}
-    };
+  
 
     var color = "beige";
     var sum = 0m;
@@ -19,7 +16,7 @@
         <th style=" border-right:2px black solid;  text-align:center">On Sale</th>
         <th style=" border-right:2px black solid;  text-align:center">Sale Price</th>
     </tr>
-    @foreach (var p in product)
+    @foreach (var p in Model.Products)
     {
         sum += p.Price * 0.5m;
         if (p.OnSale == true)
